syntax = "proto3";

package status.v1;

import "status/v1/messages.proto";

service StatusService {
  rpc Ping(status.v1.PingRequest) returns (status.v1.PingResponse) {}
  rpc Version(status.v1.VersionRequest) returns (status.v1.VersionResponse) {}
}
