syntax = "proto3";

package deployments.v1;

import "deployments/v1/info.proto";
import "deployments/v1/status.proto";

service DeploymentsService {
  rpc GetInfo(deployments.v1.GetInfoRequest) returns (deployments.v1.GetInfoResponse) {}
  rpc GetStatus(deployments.v1.GetStatusRequest) returns (deployments.v1.GetStatusResponse) {}
}
