syntax = "proto3";

package installs.v1;

import "installs/v1/info.proto";
import "installs/v1/status.proto";

service InstallsService {
  rpc GetInfo(installs.v1.GetInfoRequest) returns (installs.v1.GetInfoResponse) {}
  rpc GetStatus(installs.v1.GetStatusRequest) returns (installs.v1.GetStatusResponse) {}
}
